--- a/JS/index.html
+++ b/JS/index.html
@@ -13,6 +13,8 @@
     <script src="./UberBlack.js"></script>
     <script src="./UberPool.js"></script>
     <script src="./UberVan.js"></script>
+    <script src="./User.js"></script>
+    <script src="./Driver.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
